# Satoru

./: .env  .gitignore  README.md  app.py  list.json  main.py  pyproject.toml  requirements.txt  tag.json  text.txt  too_big.txt
cogs/: Yhy.pytggg  actions.py  battle.py  dbl.py  erased.py  events.py  help.py  images.py  info.py  list.json  mc.py  misc.py  moderation.py  owner.py  profiles.py  seedcollector.py  speech.py  triggers.py  utility.py  weeb.py
data/: beta.json  blocked_commands.json  commanbds.json  commands.json  commands.txt  dpy-trivia.json  list.json  logs.json  prefixes.json  private.json  profiles.json  stats.json  text.txt  triggers.json
templates/: commands.html  index.html  stats.html
