[tool.poetry]
name = "runner"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
jishaku = "^1.17"
googletrans = "^2.4"
psutil = "^5.6"
"discord.py" = "^1.3"
dblpy = "^0.3.4"
pytz = "^2019.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
